--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,10 @@ repositories {
 }
 
 dependencies {
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.3'//얘를 주로 쓸꺼임
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.testng:testng:7.1.0'
     compileOnly 'org.projectlombok:lombok'
