--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
     username: king
     password:
     driver-class-name: org.h2.Driver
+  redis:
+    host: localhost
+    port: 6379
 
   jpa:
     hibernate:
