redis에 토큰 저장

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     password:
     driver-class-name: org.h2.Driver
   redis:
-    host: localhost
+    host: 127.0.0.1
     port: 6379
 
   jpa:
